# django-betterFlatPages

./: MANIFEST.in  readme.md  setup.cfg
betterFlatPages/: DRF_urls.py  DRF_views.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
betterFlatPages/migrations/: 0001_initial.py
betterFlatPages/templates/betterFlatPages/: base.html  default.html
